Fixed Login nun Bild klickbar und abgelaufen nur bei Bedarf, WB Tabelle fixed

--- a/view/LoginPanel.form
+++ b/view/LoginPanel.form
@@ -102,6 +102,9 @@
           <Image iconType="3" name="/view/images/lagIcon.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblIconMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblWillkommen">
       <Properties>
